# COMP371_all

./: .gitignore
AssignmentTemplates/Assignment1/code/: CMakeLists.txt
AssignmentTemplates/Assignment1/code/src/: A1solution.cpp  A1solution.h  Scene.cpp  Scene.h
COMP371_RaytracerBase/code/: CMakeLists.txt
COMP371_RaytracerBase/code/src/: Ray.cpp  Ray.h  RayTracer.cpp  Scene.cpp  Scene.h
Lab_capsules/capsule1/code/: CMakeLists.txt
